--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -19,6 +19,7 @@ append content
       input#POST-prenom.InputAdmin(type='text' name='pass')
       input#subAdm1n(type='submit' value='log')
 append scripts
+  script(src='/static/js/angular.min.js')
   script.
     (()=>{
       angular.module('meteo', [])
