--- a/public/pong.pug
+++ b/public/pong.pug
@@ -6,7 +6,9 @@ append content
     form#adm1n
       label.pseudo Enter your Name
       input#pseudo.pseudo(type='text' name='pseudo')
-      input#playPong.pseudo(type='submit' value='Play')
+      #like_button_container.pseudo
 append scripts
   script(src='/static/js/socket.io.js')
+  script(src='/static/js/react.development.js' crossorigin)
+  script(src='/static/js/react-dom.development.js' crossorigin)
   script(src='/static/js/pong.js' defer)
