--- a/public/pong.pug
+++ b/public/pong.pug
@@ -6,7 +6,7 @@ append content
     form#adm1n
       label.pseudo Enter your Name
       input#pseudo.pseudo(type='text' name='pseudo')
-      #like_button_container.pseudo
+      #play_button_container.pseudo
 append scripts
   script(src='/static/js/socket.io.js')
   script(src='/static/js/react.development.js' crossorigin)
