--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -21,17 +21,21 @@ html(lang="en")
         p.LogoNode
           a(href='https://github.com/m1k431')
             img.minilogL(src='/static/img/gitHubMark.png' alt='git' height='30')
+            #myclock
             img.minilogL(src='/static/img/gitHubW.png' alt='git' height='35')
           a(href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img.minilogR(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
       script(src='/static/js/jquery-3.3.1.min.js' defer)
       script(src='/static/js/jquery-ui.min.js' defer)
+      script(src='/static/js/react.development.js' crossorigin)
+      script(src='/static/js/react-dom.development.js' crossorigin)
+      script(src='/static/js/layoutNav.js' defer)
       script(src='https://apis.google.com/js/platform.js' async defer)
       script(src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1')
       // Global site tag (gtag.js) - Google Analytics
       script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-113167424-1');
+        window.dataLayer = window.dataLayer || []
+        function gtag(){dataLayer.push(arguments)}
+        gtag('js', new Date())
+        gtag('config', 'UA-113167424-1')
