--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,13 +87,14 @@
         vertical-align: baseline;
     }
     
-    #myclock {
+    .myclock {
         position: absolute;
         font-size: 2em;
         width: 90%;
         left: 5%;
         right: 5%;
         top: 0.2em;
+        color: #ffffff
     }
 
     #img404 {
