--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -21,7 +21,7 @@ html(lang="en")
         p.LogoNode
           a(href='https://github.com/m1k431')
             img.minilogL(src='/static/img/gitHubMark.png' alt='git' height='30')
-            #myclock
+            a#myclock
             img.minilogL(src='/static/img/gitHubW.png' alt='git' height='35')
           a(href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img.minilogR(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
