--- a/public/cv.pug
+++ b/public/cv.pug
@@ -16,7 +16,7 @@ append content
       p.moiPara +33 695 490 777
       p.moiPara 22 rue du Bourg Tibourg
       p.moiPara 75004 Paris, FR
-      a(href='mailto:garcia.mikael@gmail.com') garcia.mikael@gmail.com
+      a.mail(href='mailto:garcia.mikael@gmail.com') garcia.mikael@gmail.com
     p.flags
       img#english(src='/static/img/uk.svg' alt='English' height='30')
       img#french(src='/static/img/france.svg' alt='Français' height='30')
