--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -12,7 +12,7 @@ append content
       p.moiPara 75004 Paris, FR
       a(href='mailto:garcia.mikael@gmail.com') garcia.mikael@gmail.com
     .metier#metier
-      h1 Junior FullStack Javascript Developer
+      h1.english Junior FullStack Javascript Developer
     .competences#competences
       h3 Skills
       .informatiques#informatique
