--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -8,6 +8,7 @@ html(lang="en")
       meta(name='description' content='Welcome to my Javascript training area :)')
       title Junior Full Stack Javascript Developer
       link(rel='stylesheet' href='/static/css/styles.css')
+      link(rel='stylesheet' href='/static/css/normalize.css')
   body
     nav#navBar
       a.nav(href='./nomPage?r=index' class='css3button') Intro
@@ -21,8 +22,8 @@ html(lang="en")
         p.LogoNode
           a(href='https://github.com/m1k431')
             img.minilogL(src='/static/img/gitHubMark.png' alt='git' height='30')
-            a#myclock
             img.minilogL(src='/static/img/gitHubW.png' alt='git' height='35')
+          a#myclock
           a(href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img.minilogR(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
