--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,99 +1,8 @@
-    html,
-    body,
-    div,
-    span,
-    applet,
-    object,
-    iframe,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    blockquote,
-    pre,
-    a,
-    abbr,
-    acronym,
-    address,
-    big,
-    cite,
-    code,
-    del,
-    dfn,
-    em,
-    img,
-    ins,
-    kbd,
-    q,
-    s,
-    samp,
-    small,
-    strike,
-    strong,
-    sub,
-    sup,
-    tt,
-    var,
-    b,
-    u,
-    i,
-    center,
-    dl,
-    dt,
-    dd,
-    ol,
-    ul,
-    li,
-    fieldset,
-    form,
-    label,
-    legend,
-    table,
-    caption,
-    tbody,
-    tfoot,
-    thead,
-    tr,
-    th,
-    td,
-    article,
-    aside,
-    canvas,
-    details,
-    embed,
-    figure,
-    figcaption,
-    footer,
-    header,
-    hgroup,
-    menu,
-    nav,
-    output,
-    ruby,
-    section,
-    summary,
-    time,
-    mark,
-    audio,
-    video {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font-size: 100%;
-        font: inherit;
-        vertical-align: baseline;
-    }
-    
     .myclock {
         position: absolute;
-        font-size: 2em;
-        width: 90%;
+        font-size: 1.4em;
         left: 5%;
         right: 5%;
-        top: 0.3em;
         color: #ffffff
     }
 
@@ -398,28 +307,6 @@ S000000000L333333iiiiLLLL
         overflow: hidden;
     }
     
-    .LogoNode {
-        margin-left: 2%;
-        margin-right: 2%;
-    }
-    
-    .minilogos {
-        margin-top: 7px;
-        margin-left: 1%;
-        margin-right: 1%;
-        margin-bottom: 4px;
-    }
-    .minilogL {
-        margin-top: 7px;
-        margin-bottom: 4px;
-        float: left;
-    }
-    .minilogR {
-        margin-top: 7px;
-        margin-bottom: 4px;
-        float: right;
-    }
-    
     #m0ncentrage {
         display: block;
         position: relative;
@@ -564,10 +451,27 @@ F000000000000TTTeeerrrrrrr
     #footer {
         display: block;
         position: fixed;
+        height: 50px;
         width: 100%;
         bottom: 0;
         background-color: rgba(19, 43, 121, 0.6);
         font-size: 1em;
+    }
+
+    .LogoNode {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+    
+    .minilogos {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+    .minilogL {
+        float: left;
+    }
+    .minilogR {
+        float: right;
     }
     
     .sidenav {
