--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,11 @@
+body {
+    background-color: rgba(19, 42, 121, 0.773);
+}
     .myclock {
-        position: absolute;
-        font-size: 1.4em;
+        font-size: 1.3em;
         left: 5%;
         right: 5%;
-        color: #ffffff
+        color: #ffffff;
     }
 
     #img404 {
@@ -38,9 +40,6 @@
 GL0000000BBBBB44444444LLLLLLLLLL
 */
     
-    body {
-        background-color: rgba(19, 42, 121, 0.773);
-    }
     
     #menuAdmin {
         position: absolute;
@@ -61,6 +60,11 @@ GL0000000BBBBB44444444LLLLLLLLLL
         font-family: monospace;
         margin-left: 7px;
         margin-right: 7px;
+    }
+
+    ul,li {
+        margin-top: 0;
+        display: inline-block;
     }
     
     nav {
@@ -266,17 +270,17 @@ H0000000mmmmmmmmmm3333333333333
     
     #BtnJs0nPl4Y {
         position: absolute;
-        width: 20%;
+        width: 12%;
+        height: 35px;
         background-color: transparent;
         color: white;
         margin-top: 48%;
-        left: 40%;
-        right: 40%;
-        text-align: center;
+        left: 44%;
+        right: 44%;
         border-radius: 10px;
         font-family: monospace;
         border-radius: 28px;
-        font-size: 1.6em;
+        font-size: 1.4em;
         padding: 5px 15px 5px 15px;
         text-decoration: none;
     }
@@ -461,19 +465,25 @@ F000000000000TTTeeerrrrrrr
     .LogoNode {
         margin-left: 2%;
         margin-right: 2%;
+        height: 100%;
     }
     
+    
+    a {
+        display: inline-block;
+    }
     .minilogos {
         margin-left: 1%;
         margin-right: 1%;
     }
     .minilogL {
         float: left;
+        height: 35px;
     }
     .minilogR {
         float: right;
+        height: 35px;
     }
-    
     .sidenav {
         height: 100%;
         width: 0;
