--- a/public/index.pug
+++ b/public/index.pug
@@ -5,7 +5,7 @@ append content
     video#jugglejungle(loop='' poster='/static/img/kuansiFalls.jpg')
       source(src='/static/video/theOneFinal2.webm' type='video/webm')
       source(src='/static/video/theOneFinal2.mp4' type='video/mp4')
-    button#BtnJs0nPl4Y
+    button#BtnJs0nPl4Y PLAY
     hr
     .paraFoot Welcome to my devlab
     #s0leil
