--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -7,8 +7,7 @@ html(lang="en")
       meta(http-equiv="X-UA-Compatible", content="ie=edge")
       meta(name='description' content='Welcome to my Javascript training area :)')
       title Junior Full Stack Javascript Developer
-      link(rel='stylesheet' href='/static/css/styles.css')
-      link(rel='stylesheet' href='/static/css/normalize.css')
+      link(rel='stylesheet' href='/static/css/index.css')
   body
     nav#navBar
       ul
@@ -25,11 +24,10 @@ html(lang="en")
     block content
     block foot
       #footer
-        p.LogoNode
           a.minilogL(href='https://github.com/m1k431')
             img(src='/static/img/gitHubMark.png' alt='git' height='35')
             img(src='/static/img/gitHubW.png' alt='git' height='35')
-          a#myclock
+          #myclock
           a.minilogR(href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
