--- a/public/pong.pug
+++ b/public/pong.pug
@@ -1,5 +1,6 @@
 extends layoutNav
 append head
+ link(rel='stylesheet' href='/static/css/pong.css')
 append content
   #m0ncentrageCV
 append scripts
