--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -1,4 +1,6 @@
 extends layoutNav.pug
+append head
+ link(rel='stylesheet' href='/static/css/admin.css') 
 append content
   #m0ncentrageAdmin
     .meteo
