--- a/public/css/pong.css
+++ b/public/css/pong.css
@@ -1,5 +1,17 @@
-body {
-  background-color: rgba(19, 42, 121, 0.773);
+#adm1n {
+  height: 60%;
+  width: 100%;
+  margin-bottom: 5%;
+  margin-top: 5%;
+}
+
+.pseudo {
+  width: 20%;
+  margin-left: 40%;
+  margin-right: 40%;
+  display: block;
+  margin-bottom: 3%;
+  text-align: center;
 }
 
 /*# sourceMappingURL=pong.css.map */
