--- a/public/css/stylesOld.css
+++ b/public/css/stylesOld.css
@@ -1,11 +1,14 @@
 body {
     background-color: rgba(19, 42, 121, 0.773);
 }
-    .myclock {
-        font-size: 1.3em;
-        left: 5%;
-        right: 5%;
+    #myclock {
+        position: absolute;
+        font-size: 0.5em;
         color: #ffffff;
+        width: 80%;
+        left: 10%;
+        right: 10%;
+        top: 10px;
     }
 
     #img404 {
@@ -39,7 +42,6 @@ body {
     /*
 GL0000000BBBBB44444444LLLLLLLLLL
 */
-    
     
     #menuAdmin {
         position: absolute;
@@ -108,12 +110,6 @@ GL0000000BBBBB44444444LLLLLLLLLL
         top: 10px;
     }
     
-    #newArticle {
-        width: 60%;
-        margin-left: 20%;
-        margin-right: 20%;
-        margin-bottom: 2px;
-    }
     
     .InputAdmin {
         width: 20%;
@@ -123,6 +119,13 @@ GL0000000BBBBB44444444LLLLLLLLLL
         margin-bottom: 3%;
     }
     
+    #newArticle {
+        width: 60%;
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-bottom: 2px;
+    
+    }
     .InputTitre {
         width: 80%;
         margin-left: 10%;
@@ -189,10 +192,8 @@ GL0000000BBBBB44444444LLLLLLLLLL
     
     a.nav {
         margin: 10px;
-        display: inline-block;
         margin-left: 5px;
         margin-right: 5px;
-        color: white;
         font-size: 1.1em;
         text-align: center;
         font-family: monospace;
@@ -201,9 +202,19 @@ GL0000000BBBBB44444444LLLLLLLLLL
     .css3button {
         background: rgba(19, 43, 121, 0.449);
         background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.476), rgba(19, 43, 121, 0.5));
+        width: 70px;
         border-radius: 28px;
         color: #ffffff;
+        padding: 10px 2px 12px 2px;
+        text-decoration: none;
+    }
+    
+    .css3buttonRed {
+        background: rgba(145, 31, 31, 0.49);
+        background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.449), rgba(145, 31, 31, 0.5));
         width: 70px;
+        border-radius: 28px;
+        color: #ffffff;
         padding: 10px 2px 12px 2px;
         text-decoration: none;
     }
@@ -213,17 +224,7 @@ GL0000000BBBBB44444444LLLLLLLLLL
         background-image: linear-gradient(to bottom, rgba(60, 176, 253, 0.49), #3498db);
         text-decoration: none;
     }
-    
-    .css3buttonRed {
-        background: rgba(145, 31, 31, 0.49);
-        width: 70px;
-        background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.449), rgba(145, 31, 31, 0.5));
-        border-radius: 28px;
-        color: #ffffff;
-        padding: 10px 2px 12px 2px;
-        text-decoration: none;
-    }
-    
+
     .css3buttonRed:hover {
         background: #3cb0fd;
         background-image: linear-gradient(to bottom, #fd3c3c, #db3434);
@@ -258,9 +259,8 @@ H0000000mmmmmmmmmm3333333333333
     }
     
     video {
+        display: none;
         width: 100%;
-        margin-top: 1%;
-        margin-bottom: 1%;
     }
     
     hr {
@@ -270,14 +270,12 @@ H0000000mmmmmmmmmm3333333333333
     
     #BtnJs0nPl4Y {
         position: absolute;
-        width: 16%;
-        height: 35px;
+        width: 24%;
         background-color: transparent;
         color: white;
-        margin-top: 48%;
-        left: 42%;
-        right: 42%;
-        border-radius: 10px;
+        margin-left: 38%;
+        margin-right: 38%;
+        margin-top: -9%;
         font-family: monospace;
         border-radius: 28px;
         font-size: 1.4em;
@@ -296,12 +294,10 @@ S000000000L333333iiiiLLLL
     
     #s0leil {
         display: none;
-        position: relative;
         width: 100%;
     }
     
     #snowB {
-        position: relative;
         display: block;
         background-image: url(/static/img/360backnoreverse.gif);
         background-repeat: no-repeat;
@@ -312,7 +308,6 @@ S000000000L333333iiiiLLLL
     }
     
     #m0ncentrage {
-        display: block;
         position: relative;
         margin-left: 3%;
         margin-right: 3%;
@@ -462,28 +457,23 @@ F000000000000TTTeeerrrrrrr
         font-size: 1em;
     }
 
-    .LogoNode {
-        margin-left: 2%;
-        margin-right: 2%;
-        height: 100%;
-    }
-    
-    
     a {
         display: inline-block;
     }
-    .minilogos {
-        margin-left: 1%;
-        margin-right: 1%;
-    }
+    
     .minilogL {
         float: left;
         height: 35px;
+        margin-top: 8px;
+        margin-left: 8px;
     }
     .minilogR {
         float: right;
         height: 35px;
+        margin-top: 8px;
+        margin-right: 8px;
     }
+
     .sidenav {
         height: 100%;
         width: 0;
