--- a/public/cv.pug
+++ b/public/cv.pug
@@ -216,15 +216,15 @@ append content
         hr
       .jobs
         h4 IUT informatique d&apos;Orl&eacute;ans
-        h5.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
-        h5.english Systems and Networks: Administration and deployment network of systems in Linux environment, regexp assembler notions
-        h5.spanish Sistemas y Redes: Red de administración e implementación de sistemas en entorno Linux, nociones de ensamblador regexp        
-        h5.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
-        h5.english Database: Analysis (merise), design (MCD, MCT), maintenance
-        h5.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
-        h5.french Programmation: Langage C, C++, SQL, bsh, assembly language
-        h5.english Programming: Langage C, C++, SQL, bsh, assembly language
-        h5.spanish Programación: Langage C, C++, SQL, bsh, assembly language
+        .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
+        .infojob.english Systems and Networks: Administration and deployment network of systems in Linux environment, regexp assembler notions
+        .infojob.spanish Sistemas y Redes: Red de administración e implementación de sistemas en entorno Linux, nociones de ensamblador regexp        
+        .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
+        .infojob.english Database: Analysis (merise), design (MCD, MCT), maintenance
+        .infojob.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
+        .infojob.french Programmation: Langage C, C++, SQL, bsh, assembly language
+        .infojob.english Programming: Langage C, C++, SQL, bsh, assembly language
+        .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
         hr
       .jobs
         h4.french Baccalaur&eacute;at Scientifique: Sp&eacute;cialit&eacute; physique-chimie
