--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -33,8 +33,8 @@ html(lang="en")
     block scripts
       script(src='/static/js/jquery-3.3.1.min.js' defer)
       script(src='/static/js/jquery-ui.min.js' defer)
-      script(src='/static/js/react.development.js' crossorigin)
-      script(src='/static/js/react-dom.development.js' crossorigin)
+      script(src='/static/js/react.development.js' crossorigin="anonymous")
+      script(src='/static/js/react-dom.development.js' crossorigin="anonymous")
       script(src='/static/js/layoutNav.js' defer)
       script(src='https://apis.google.com/js/platform.js' async defer)
       script(src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1')
