--- a/public/css/scss/index.scss
+++ b/public/css/scss/index.scss
@@ -154,9 +154,10 @@ a.nav {
     position: absolute;
     background-color: transparent;
     color: white;
+    width: 20%;
     left: 40%;
     right: 40%;
-    top: 300px;
+    margin-top: -50px;
     font-family: $myFont;
     border-radius: 28px;
     font-size: 1em;
