--- a/public/css/index.css
+++ b/public/css/index.css
@@ -344,11 +344,16 @@ template {
 .css3buttonRed, .css3button {
   width: 70px;
   border-radius: 28px;
-  padding: 10px 2px 12px 2px;
+  padding: 5px 2px 12px 2px;
 }
 
 body {
   background-color: rgba(19, 42, 121, 0.773);
+  height: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 h1,
@@ -381,7 +386,7 @@ nav a {
   width: 100%;
   top: 0;
   margin: 0;
-  height: 60px;
+  height: 50px;
   z-index: 1;
 }
 
@@ -434,13 +439,23 @@ a.nav {
   text-decoration: none;
 }
 
-#m0ncentrage {
-  position: relative;
+.content {
+  display: table;
+  height: 100%;
+  width: 94%;
   margin-left: 3%;
-  margin-right: 3%;
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin-top: 3%;
+}
+
+.table-cell {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+#m0ncentrage {
   display: none;
+  margin: 0 auto;
 }
 
 #m0ncentrageCV {
@@ -476,9 +491,9 @@ a.nav {
   position: absolute;
   background-color: transparent;
   color: white;
-  width: 20%;
-  left: 40%;
-  right: 40%;
+  width: 16%;
+  left: 42%;
+  right: 42%;
   margin-top: -50px;
   font-family: monospace;
   border-radius: 28px;
