--- a/public/css/scss/index.scss
+++ b/public/css/scss/index.scss
@@ -11,11 +11,16 @@ $colorBody: rgba(19, 42, 121, 0.773);
 %css3Button {
     width: 70px;
     border-radius: 28px;
-    padding: 10px 2px 12px 2px;
+    padding: 5px 2px 12px 2px;
 }
 
 body {
     background-color: $colorBody;
+    height: 100%;
+}
+
+html {
+    height: 100%;
 }
 
 h1,
@@ -50,7 +55,7 @@ nav {
     width: 100%;
     top: 0;
     margin: 0;
-    height: 60px;
+    height: 50px;
     z-index: 1;
 }
 
@@ -104,13 +109,23 @@ a.nav {
     text-decoration: none;
 }
 
+.content {
+  display: table;
+  height: 100%;
+  width: 94%;
+  margin-left: 3%;
+  margin-top: 3%;
+ }
+
+.table-cell {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
 #m0ncentrage {
-    position: relative;
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-top: 80px;
-    margin-bottom: 80px;
     display: none;
+    margin: 0 auto;
 }
 
 #m0ncentrageCV {
@@ -154,9 +169,9 @@ a.nav {
     position: absolute;
     background-color: transparent;
     color: white;
-    width: 20%;
-    left: 40%;
-    right: 40%;
+    width: 16%;
+    left: 42%;
+    right: 42%;
     margin-top: -50px;
     font-family: $myFont;
     border-radius: 28px;
