--- a/public/index.pug
+++ b/public/index.pug
@@ -1,12 +1,14 @@
 extends layoutNav.pug
 append content
-  #m0ncentrage
-    .paraFoot My name is Mikael. I'm a javascript developer. This website hosts my skills, projects and experiences.
-      video#jugglejungle(loop='' poster='/static/img/kuansiFalls.jpg')
-        source(src='/static/video/theOneFinal2.webm' type='video/webm')
-        source(src='/static/video/theOneFinal2.mp4' type='video/mp4')
-    button#BtnJs0nPl4Y Play
-    .paraFoot Welcome to my devlab
-      #s0leil
+  .content
+    .table-cell
+      #m0ncentrage
+        .paraFoot My name is Mikael. I'm a javascript developer. This website hosts my skills, projects and experiences.
+          video#jugglejungle(loop='' poster='/static/img/kuansiFalls.jpg')
+            source(src='/static/video/theOneFinal2.webm' type='video/webm')
+            source(src='/static/video/theOneFinal2.mp4' type='video/mp4')
+        button#BtnJs0nPl4Y Play
+        .paraFoot Welcome to my devlab
+          #s0leil
 append scripts
   script(src='/static/js/soleil.js')
