--- a/public/css/scss/index.scss
+++ b/public/css/scss/index.scss
@@ -11,7 +11,7 @@ $colorBody: rgba(19, 42, 121, 0.773);
 %css3Button {
     width: 70px;
     border-radius: 28px;
-    padding: 5px 2px 12px 2px;
+    padding: 5px 2px 7px 2px;
 }
 
 body {
@@ -125,6 +125,8 @@ a.nav {
 #m0ncentrage {
     display: none;
     margin: 0 auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 #m0ncentrageCV {
