BrickBreaker prod & resume update

--- a/public/cv.pug
+++ b/public/cv.pug
@@ -29,34 +29,32 @@ append content
       h3.french Comp&eacute;tences
       h3.english Skills
       h3.spanish  Competencias
-      .informatiques#informatique
-        h4.french D&eacute;veloppement
-        h4.english Development
-        h4.spanish Desarollo
-        .info.french Ecrire un site en HTML5,CSS3 et JavaScript (JQuery, Bootstrap)
-        .info.english Coding websites in HTML5, CSS3 and JavaScript (JQuery, Bootstrap)
-        .info.spanish Desarrollo de sitios en HTML5, CSS3 y JavaScript (JQuery, Bootstrap)
-        .info.french Cr&eacute;er et structurer des bases de donn&eacute;es (MongoDB, noSQL)
-        .info.english Create and structure databases (MongoDB, noSQL)
-        .info.spanish Creación y estructuración de bases de datos (MongoDB, noSQL)
-        .info.french D&eacute;velopper une application internet (Node.js, ExpressJS, AngularJS)
-        .info.english Develop an internet application (Node.js, ExpressJS, AngularJS)
-        .info.spanish Desarrollo de aplicaciónes internet (Node.js, ExpressJS, AngularJS)
-        .info.french Architecturer et d&eacute;velopper un back-office
-        .info.english Architect and develop a back office
-        .info.spanish Creación de backoffice
-        .info.french Construire et s&eacute;curiser les donn&eacute;es relationnelles (WebSocket)
-        .info.english Building and securing relational data (WebSocket)
-        .info.spanish Seguridad de datos relacionales (WebSocket)
-        .info.french Proc&eacute;der aux tests de v&eacute;rification
-        .info.english To proceed to the tests of verification
-        .info.spanish Procedimiento a las pruebas de verificación
-        .info.french R&eacute;diger un cahier des charges techniques (OpenOffice)
-        .info.english Write a technical specification (OpenOffice)
-        .info.spanish Escritura de las especificaciónes técnicas (OpenOffice)
-        .infolast.french Elaborer des chartes graphiques (Photoshop)
-        .infolast.english Develop graphic charts (Photoshop)
-        .infolast.spanish Diseño de gráficos (Photoshop)
+      .informatiquesCont
+        h4 Front-End Development
+        .informatiques#informatique
+          .info HTML5
+          .info PUG
+          .info CSS3
+          .info SCSS
+          .info JavaScript
+          .info JQUERY
+          .info BootStrap
+          .info AngularJS
+          .info ReactJS
+        h4 Back-End Development
+        .informatiques#informatique
+          .info Apache
+          .info NodeJS
+          .info ExpressJS
+          .info MongoDb
+          .info Websocket
+        h4 Tools
+        .informatiques#informatique
+          .info Unix
+          .info Windows
+          .info Git
+          .info bsz/zsh
+          .info Photoshop
       .btp#btp
         h4.french Techniques &amp; Design
         h4.english Techniques &amp; Design
