--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -15,16 +15,32 @@ append content
       h1.english Junior FullStack Javascript Developer
     .competences#competences
       h3 Skills
-      .informatiques#informatique
-        h4 Development
-        .infoJeu Coding websites in HTML5, CSS3 and JavaScript (JQuery, Bootstrap)
-        .infoJeu Create and structure databases (MongoDB, noSQL)
-        .infoJeu Develop an internet application (Node.js, ExpressJS, AngularJS)
-        .infoJeu Architect and develop a back office
-        .infoJeu Building and securing relational data (WebSocket)
-        .infoJeu To proceed to the tests of verification
-        .infoJeu Write a technical specification (OpenOffice)
-        .infolast Develop graphic charts (Photoshop)
+      .informatiquesCont#informatique
+        h4 Front-End Development
+        .informatiques#informatique
+          .infoJeu HTML5
+          .infoJeu PUG
+          .infoJeu CSS3
+          .infoJeu SCSS
+          .infoJeu JavaScript
+          .infoJeu JQUERY
+          .infoJeu BootStrap
+          .infoJeu AngularJS
+          .infoJeu ReactJS
+        h4 Back-End Development
+        .informatiques#informatique
+          .infoJeu Apache
+          .infoJeu NodeJS
+          .infoJeu ExpressJS
+          .infoJeu MongoDb
+          .infoJeu WebSocket
+        h4 Tools
+        .informatiques#informatique
+          .infoJeu Unix
+          .infoJeu Windows
+          .infoJeu Git
+          .infoJeu bsz/zsh
+          .infoJeu Photoshop
       .btp#btp
         h4 Techniques &amp; Design
         .infoJeu Conduct the technical study of a construction project and estimate the cost
