--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -329,7 +329,7 @@ $$$$$$  POLICES &&& background:   $$$$$
   right: 0;
 }
 
-.informatiques {
+.informatiquesCont {
   width: 31.5%;
   text-align: center;
   background-color: rgba(245, 247, 246, 0.2);
@@ -340,6 +340,22 @@ $$$$$$  POLICES &&& background:   $$$$$
   vertical-align: middle;
   display: inline-block;
   overflow: visible;
+}
+
+.informatiques {
+  background-color: rgba(245, 247, 246, 0.2);
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 0.1%;
+  margin-bottom: 0.5%;
+  margin-right: 0.5%;
+  vertical-align: middle;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  overflow: visible;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 .jobs {
@@ -399,7 +415,6 @@ $$$$$$  POLICES &&& background:   $$$$$
 .infoJeu {
   font-family: monospace;
   margin-bottom: 2px;
-  font-size: 1em;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 5px;
