--- a/public/css/pong.css
+++ b/public/css/pong.css
@@ -12,6 +12,7 @@
   display: block;
   margin-bottom: 3%;
   text-align: center;
+  font-family: monospace;
 }
 
 /*# sourceMappingURL=pong.css.map */
