--- a/public/css/scss/admin.scss
+++ b/public/css/scss/admin.scss
@@ -1,3 +1,5 @@
+$myFont: monospace;
+
 .meteo {
     width: 10%;
     margin-left: 45%;
@@ -42,6 +44,7 @@
     margin-right: 20%;
     display: block;
     text-align: center;
+    font-family: $myFont;
 }
 
 #subAdm1n,
