--- a/public/css/scss/pong.scss
+++ b/public/css/scss/pong.scss
@@ -1,3 +1,5 @@
+$myFont: monospace;
+
 #adm1n {
     height: 60%;
     width: 100%;
@@ -12,4 +14,5 @@
     display: block;
     margin-bottom: 3%;
     text-align: center;
+    font-family: $myFont;
 }
