--- a/public/cv.pug
+++ b/public/cv.pug
@@ -49,7 +49,7 @@ append content
           .info MongoDb
           .info Websocket
         h4 Tools
-        .informatiques#informatique
+        .informatiquesLast#informatique
           .info Unix
           .info Windows
           .info Git
