--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -35,7 +35,7 @@ append content
           .infoJeu MongoDb
           .infoJeu WebSocket
         h4 Tools
-        .informatiques#informatique
+        .informatiquesLast#informatique
           .infoJeu Unix
           .infoJeu Windows
           .infoJeu Git
