--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -39,7 +39,7 @@ append content
           .infoJeu Unix
           .infoJeu Windows
           .infoJeu Git
-          .infoJeu bsz/zsh
+          .infoJeu bsh/zsh
           .infoJeu Photoshop
       .btp#btp
         h4 Techniques &amp; Design
@@ -120,9 +120,9 @@ append content
         hr
       .jobs
         h4 IUT informatique d&apos;Orl&eacute;ans
-        h5 Systems and Networks: Administration and deployment network of systems in Linux environment, regexp assembler notions
-        h5 Database: Analysis (merise), design (MCD, MCT), maintenance
-        h5 Programming: Langage C, C++, SQL, bsh, assembleur
+        .infojob Systems and Networks: Administration and deployment network of systems in Linux environment, regexp assembler notions
+        .infojob Database: Analysis (merise), design (MCD, MCT), maintenance
+        .infojob Programming: Langage C, C++, SQL, bsh, assembleur
         hr
       .jobs
         h4 Scientific Baccalaureate
