--- a/public/cv.pug
+++ b/public/cv.pug
@@ -53,7 +53,7 @@ append content
           .info Unix
           .info Windows
           .info Git
-          .info bsz/zsh
+          .info bsh/zsh
           .info Photoshop
       .btp#btp
         h4.french Techniques &amp; Design
@@ -215,13 +215,13 @@ append content
       .jobs
         h4 IUT informatique d&apos;Orl&eacute;ans
         .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
-        .infojob.english Systems and Networks: Administration and deployment network of systems in Linux environment, regexp assembler notions
-        .infojob.spanish Sistemas y Redes: Red de administración e implementación de sistemas en entorno Linux, nociones de ensamblador regexp        
         .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
-        .infojob.english Database: Analysis (merise), design (MCD, MCT), maintenance
-        .infojob.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
         .infojob.french Programmation: Langage C, C++, SQL, bsh, assembly language
+        .infojob.english Systems and Networks: Administration and deployment network of systems in Linux environment, regexp assembler notions
+        .infojob.english Database: Analysis (merise), design (MCD, MCT), maintenance
         .infojob.english Programming: Langage C, C++, SQL, bsh, assembly language
+        .infojob.spanish Sistemas y Redes: Red de administración e implementación de sistemas en entorno Linux, nociones de ensamblador regexp        
+        .infojob.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
         .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
         hr
       .jobs
