--- a/public/index.pug
+++ b/public/index.pug
@@ -5,7 +5,8 @@ append content
       #m0ncentrage
         .paraFoot Welcome to my devlab
           #s0leil
-        .paraFoot My name is Mikael. I'm a javascript developer. This website hosts my skills, projects and experiences.
+        .paraFoot My name is Mikael, I'm a javascript developer.
+        .paraFoot This website hosts my skills, projects and experiences.
           video#jugglejungle(loop='' poster='/static/img/kuansiFalls.jpg')
             source(src='/static/video/theOneFinal2.webm' type='video/webm')
             source(src='/static/video/theOneFinal2.mp4' type='video/mp4')
