--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -5,7 +5,11 @@ html(lang="en")
       meta(charset="UTF-8")
       meta(name="viewport", content="width=device-width, initial-scale=0.7")
       meta(http-equiv="X-UA-Compatible", content="ie=edge")
-      meta(name='description' content='Welcome to my Javascript training area :)')
+      meta(name='description' content='My Javascript Portfolio')
+      meta(property='og:title' content='Junior Full Stack Javascript Developer')
+      meta(property='og:image' content='//mikael.ml/static/img/ogImage.png')
+      meta(property='og:description' content='My Javascript Portfolio')
+      meta(property='og:url' content='//mikael.ml')
       title Junior Full Stack Javascript Developer
       link(rel='stylesheet' href='/static/css/index.css')
   body
