--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -22,7 +22,7 @@ html(lang="en")
         li
           a.nav(href='./nomPage?r=cv' class='css3button') Resume
         li
-          a.nav(href='./nomPage?r=pong' class='css3buttonRed') P0NG
+          a.nav(href='./nomPage?r=joust' class='css3buttonRed') J0usT
         li
           a.nav(href='./nomPage?r=adm1n' class='css3button') Admin
     block content
