--- a/public/404.pug
+++ b/public/404.pug
@@ -1,4 +1,6 @@
 extends layoutNav.pug
 append content
-    #E404
+  .content
+    .table-cell
+      #E404
         img#img404(src='/static/img/pugsvg.svg')
