--- a/public/joust.pug
+++ b/public/joust.pug
@@ -2,7 +2,9 @@ extends layoutNav
 append head
  link(rel='stylesheet' href='/static/css/joust.css')
 append content
-  #m0ncentrageCV
+  .content
+    .table-cell
+      #m0ncentrageAdmin
 append scripts
   script(src='/static/js/socket.io.js')
   script(src='/static/js/joust.js' defer)
