--- a/public/css/scss/index.scss
+++ b/public/css/scss/index.scss
@@ -124,18 +124,17 @@ a.nav {
 
 #m0ncentrage {
     display: none;
-    margin: 0 auto;
     margin-top: 60px;
     margin-bottom: 70px;
 }
 
 #m0ncentrageCV {
-    display: block;
-    position: absolute;
-    left: 3%;
-    right: 3%;
-    top: 55px;
-    bottom: 55px;
+    display: none;
+    //position: absolute;
+    //left: 3%;
+    //right: 3%;
+    margin-top: 60px;
+    margin-bottom: 70px;
 }
 
 #m0ncentrageAdmin {
