--- a/public/cv.pug
+++ b/public/cv.pug
@@ -32,7 +32,7 @@ append content
           h3.french Comp&eacute;tences
           h3.english Skills
           h3.spanish  Competencias
-          .informatiquesCont
+          .informatiquesCont.french.english.spanish
             h4 Front-End Development
             .informatiques#informatique
               .info HTML5
@@ -58,7 +58,7 @@ append content
               .info Git
               .info bsh/zsh
               .info Photoshop
-          .btp#btp
+          .btp#btp.french.english.spanish
             h4.french Techniques &amp; Design
             h4.english Techniques &amp; Design
             h4.spanish Técnicas &amp; diseño
@@ -71,7 +71,7 @@ append content
             .infolast.french R&eacute;aliser un dossier de d&eacute;tails d&rsquo;ex&eacute;cutions de projet (Autocad, VectorWorks)
             .infolast.english Make a project execution details folder (Autocad, VectorWorks)
             .infolast.spanish Creación de carpetas de detalles de ejecución de proyectos (Autocad, VectorWorks)
-          .commerciales#commerciales
+          .commerciales#commerciales.french.english.spanish
             h4 H to H
             .info.french Assistant r&eacute;gie au Palais des Festivals de Cannes et en boite de productions t&eacute;l&eacute;visuelles
             .info.english Assistant director at Palais des Festivals in Cannes and in a television productions company
