--- a/public/css/index.css
+++ b/public/css/index.css
@@ -458,12 +458,6 @@ a.nav {
   margin-bottom: 70px;
 }
 
-#m0ncentrageCV {
-  display: none;
-  margin-top: 60px;
-  margin-bottom: 70px;
-}
-
 #m0ncentrageAdmin {
   display: block;
   position: relative;
@@ -538,13 +532,13 @@ a.nav {
   margin-right: 8px;
 }
 
-#myclock {
+.myclock {
   position: absolute;
-  font-size: 0.5em;
+  font-size: 2em;
   color: #ffffff;
   left: 40%;
   right: 40%;
-  top: 10px;
+  top: 0px;
 }
 
 /*# sourceMappingURL=index.css.map */
