pdf and paddle height

--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -117,10 +117,7 @@ $$$$$$  POLICES &&& background:   $$$$$
 
 .pdf {
   position: absolute;
-  width: 40%;
-  left: 30%;
-  right: 30%;
-  top: 35px;
+  float: left;
 }
 
 .moi {
@@ -165,7 +162,7 @@ $$$$$$  POLICES &&& background:   $$$$$
   border-radius: 10px;
   height: 25px;
   margin: 5px;
-  top: 690px;
+  float: left;
   background-color: yellowgreen;
 }
 
