--- a/public/cv.pug
+++ b/public/cv.pug
@@ -6,14 +6,14 @@ append content
     .table-cell
       #m0ncentrage
         .moi
-          a.pdf.french(href='/static/img/cvMikaelFr.pdf')
-            img.pdf(src='/static/img/downPdf.svg' alt='download pdf' height='64')
-          a.pdf.english(href='/static/img/cvMikaelEn.pdf')
-            img.pdf(src='/static/img/downPdf.svg' alt='download pdf' height='64')
-          a.pdf.spanish(href='/static/img/cvMikaelEs.pdf')
-            img.pdf(src='/static/img/downPdf.svg' alt='download pdf' height='64')
           p.moiPara Mika&euml;l GARCIA
             img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' height='78' onclick='openlinkedin();')
+          a.pdf.french(href='/static/img/cvMikaelFr.pdf')
+            img.pdf.french(src='/static/img/downPdf.svg' alt='download pdf' height='64')
+          a.pdf.english(href='/static/img/cvMikaelEn.pdf')
+            img.pdf.english(src='/static/img/downPdf.svg' alt='download pdf' height='64')
+          a.pdf.spanish(href='/static/img/cvMikaelEs.pdf')
+            img.pdf.spanish(src='/static/img/downPdf.svg' alt='download pdf' height='64')
           p.moiPara 35 y/o
           p.moiPara +33 695 490 777
           p.moiPara 22 rue du Bourg Tibourg
