--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -7,6 +7,11 @@ p.moiPara, p.jeu {
   font-family: monospace;
 }
 
+@media print {
+  #navBar, #footer {
+    display: none;
+  }
+}
 /*****
 $$$$$$  BALISES HTML   $$$$$
 ****/
@@ -134,7 +139,6 @@ $$$$$$  POLICES &&& background:   $$$$$
   border: 1px solid #08021f;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
-  margin-bottom: 60px;
   display: none;
 }
 
@@ -152,7 +156,6 @@ $$$$$$  POLICES &&& background:   $$$$$
   border: 1px solid #08021f;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
-  margin-bottom: 60px;
 }
 
 .linkedinT {
