--- a/public/cv.pug
+++ b/public/cv.pug
@@ -35,29 +35,29 @@ append content
           .informatiquesCont.french.english.spanish
             h4 Front-End Development
             .informatiques#informatique
-              .info HTML5
-              .info PUG
-              .info CSS3
-              .info SCSS
-              .info JavaScript
-              .info JQUERY
-              .info BootStrap
-              .info AngularJS
-              .info ReactJS
+              .infoJeu HTML5
+              .infoJeu PUG
+              .infoJeu CSS3
+              .infoJeu SCSS
+              .infoJeu JavaScript
+              .infoJeu JQUERY
+              .infoJeu BootStrap
+              .infoJeu AngularJS
+              .infoJeu ReactJS
             h4 Back-End Development
             .informatiques#informatique
-              .info Apache
-              .info NodeJS
-              .info ExpressJS
-              .info MongoDb
-              .info Websocket
+              .infoJeu Apache
+              .infoJeu NodeJS
+              .infoJeu ExpressJS
+              .infoJeu MongoDb
+              .infoJeu WebSocket
             h4 Tools
             .informatiquesLast#informatique
-              .info Unix
-              .info Windows
-              .info Git
-              .info bsh/zsh
-              .info Photoshop
+              .infoJeu Unix
+              .infoJeu Windows
+              .infoJeu Git
+              .infoJeu bsh/zsh
+              .infoJeu Photoshop
           .btp#btp.french.english.spanish
             h4.french Techniques &amp; Design
             h4.english Techniques &amp; Design
