--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -18,11 +18,9 @@ html(lang="en")
         li 
           a.nav(href='./nomPage?r=index' class='css3button') Intro
         li
-          a.nav(href='./nomPage?r=jeuCV' class='css3buttonRed') CV Game
+          a.nav(href='./nomPage?r=jeuCV' class='css3button') Resume
         li
-          a.nav(href='./nomPage?r=cv' class='css3button') Resume
-        li
-          a.nav(href='./nomPage?r=joust' class='css3buttonRed') J0usT
+          a.nav(href='./nomPage?r=joust' class='css3button') J0usT
         li
           a.nav(href='./nomPage?r=adm1n' class='css3button') Admin
     block content
