red selected nav

--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -32,4 +32,6 @@ append scripts
         ])
       })
       angular.bootstrap(document,['meteo'], {strictDi:false})
+      let navBut = window.document.getElementsByClassName('nav')
+      navBut[3].className = 'css3buttonRed'
     })()
