--- a/public/css/index.css
+++ b/public/css/index.css
@@ -423,6 +423,14 @@ a.nav {
 }
 
 .css3buttonRed {
+  margin: 10px;
+  display: inline-block;
+  margin-left: 5px;
+  margin-right: 5px;
+  color: white;
+  font-size: 1.1em;
+  text-align: center;
+  font-family: monospace;
   background: rgba(145, 31, 31, 0.49);
   background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.449), rgba(145, 31, 31, 0.5));
 }
