--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -10,7 +10,7 @@ html(lang="en")
       meta(property='og:image' content='//mikael.ml/static/img/ogImage.png')
       meta(property='og:description' content='My Javascript Portfolio')
       meta(property='og:url' content='//mikael.ml')
-      link(rel='stylesheet' href='/static/css/index.css')
+      link(rel='stylesheet' href='/static/css/styles.css')
       title Junior Full Stack Javascript Developer
   body
     nav#navBar
